--- a/src/iatoolkit/templates/chat_modals.html
+++ b/src/iatoolkit/templates/chat_modals.html
@@ -136,7 +136,7 @@
       </div>
 
       <div class="modal-footer">
-        <button id="ob-close" type="button" class="btn btn-branded-secondary" data-bs-dismiss="modal">
+        <button id="ob-close" type="button" class="btn btn-branded-primary" data-bs-dismiss="modal">
             Cerrar
         </button>
         </div>
